# rust_playground

bevy_rapier_01/: .gitignore  Cargo.toml  build_and_run_wasm.sh  index.html
bevy_rapier_01/.cargo/: config.toml
bevy_rapier_01/_ai/: task_01.md  task_02.md  task_03.md  task_04.md  task_05.md
bevy_rapier_01/assets/data/: level_01.json  level_02.json
bevy_rapier_01/src/: components.rs  game.rs  level.rs  lib.rs  main.rs  physics.rs  resources.rs  systems.rs  ui.rs
