[package]
name = "rust-bevy-play"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["webgl2"] }
bevy_rapier2d = { version = "0.25", features = [
    "wasm-bindgen",
    "enhanced-determinism",
] }
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.1"


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main_desktop"
path = "src/main.rs"

[[bin]]
name = "level_generator"
path = "src/bin/level_generator.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.100"
